css/styles.css
body {
    font-family: 'Lato', sans-serif;
}

/*Services Section*/

.services {
    background-color: #F8F8F8;
}

.services .row {
    max-width: 992px;
    margin: 5em auto;
}

.intro {
    background-color: #000;
}

.services-box {
    background-color: #FFF;
    max-width: 400px;
    margin: 0 auto;
    padding: 0 0 3em;
}

.img-center, .paragraph-center, .services h2{
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.paragraph-center {
    max-width: 400px;
    padding: 1em 1em 0;
}

.cta {
    background-color: rgba(194, 47, 47,1);
    color: #FFF;
    padding: 1em 1.5em;
    border: 0px solid #fff!important;
    margin: 1em 0 .5em;
}

.cta:hover {
    background-color: rgba(194, 47, 47,.95);
    color: #FFF;
    border: 0px solid #fff !important;
}

.cta span {
    margin-right: .5em;
}

.services h2 {
    font-size: 24px;
    font-weight: 700;
    max-width: 400px;
    color: rgba(194, 47, 47,1);
    padding: 1em 0 0.5em;
}

/*Demarches Section*/

.demarches {
    margin: 4em 0 5em;
}

.nav-tabs li span {
    display: block;
    text-align: center;
    font-size: 30px;
    color: rgba(194, 47, 47,1);
    margin: .5em 0;
}

.nav-tabs li a {
    font-size: 16px;
    font-weight: 700;
    color: rgba(194, 47, 47,1) !important;
}

.nav-tabs>li:hover,
.nav-tabs>li.active>a{
    border-bottom: 3px solid rgba(194, 47, 47,1);
}

.nav-tabs>li.active {
    border-top: 0px solid #ddd;
    border-left: 0px solid #ddd;
    border-right: 0px solid #ddd;
}

.nav-tabs>li>a,
.nav-tabs>li>a:hover,
.nav-tabs>li.active>a,
.nav-tabs>li.active>a:focus,
.nav-tabs>li.active>a:hover {
    border-top: 0px solid #ddd;
    border-left: 0px solid #ddd;
    border-right: 0px solid #ddd;
    background-color: #fff;
}

#myTab.nav-tabs {
    border: 0px solid transparent;
}

ul#myTab {
    display: flex;
    justify-content: center;
    margin-bottom: 4em !important;
}

#myTabContent p,
#myTabContent h5 {
    max-width: 992px;
    margin: 1em auto;
}

#myTabContent h5 {
    font-size: 16px;
    font-weight: 700;
}

/*Responsive Demarches Section*/

.panel-default>.panel-heading {
    background-color: #FFF;
}

a.js-tabcollapse-panel-heading {
    text-decoration: none;
    color: rgba(194, 47, 47,1);
}

#myTab-accordion .panel-default {
    border-color: rgba(194, 47, 47,1);
}

@media (max-width:768px) {
    .demarches .container {
        margin: 3em;
    }
}

